--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,11 @@ dependencies {
     compile 'com.android.support:support-v4:19.1.0'
     compile files('libs/jackson-all-1.9.11.jar')
     compile files('libs/mongo-2.10.1.jar')
+    compile project(':xcl-charts')
+    compile 'com.github.PhilJay:MPAndroidChart:v2.2.3'
 }
+
+repositories {
+    maven { url "https://jitpack.io" }
+}
+
