--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 19
@@ -29,4 +30,6 @@ dependencies {
 repositories {
     maven { url "https://jitpack.io" }
 }
+
+
 
