--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
+    compileSdkVersion 23
     buildToolsVersion "23.0.2"
 
     defaultConfig {
+        multiDexEnabled true
         applicationId "com.glucopred"
         minSdkVersion 18
         targetSdkVersion 18
@@ -19,11 +20,15 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:19.1.0'
+    compile 'com.android.support:support-v4:23.2.1'
+    compile 'com.android.support:appcompat-v7:23.2.1'
     compile files('libs/jackson-all-1.9.11.jar')
     compile files('libs/mongo-2.10.1.jar')
     compile project(':xcl-charts')
     compile 'com.github.PhilJay:MPAndroidChart:v2.2.3'
+    compile 'com.ogaclejapan.smarttablayout:library:1.6.0@aar'
+    compile 'com.ogaclejapan.smarttablayout:utils-v4:1.6.0@aar'
+    compile 'com.github.d-max:spots-dialog:0.4@aar'
 }
 
 repositories {
