--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'com.ogaclejapan.smarttablayout:library:1.6.0@aar'
     compile 'com.ogaclejapan.smarttablayout:utils-v4:1.6.0@aar'
     compile 'com.github.d-max:spots-dialog:0.4@aar'
+    compile 'au.com.datasymphony:EasyFlow:1.3.1'
 }
 
 repositories {
